[package]
name = "awsmfa"
version = "0.3.0"
edition = "2021"
authors = ["Kanji Tanaka"]
categories = ["command-line-utilities"]
keywords = ["aws", "awscli", "aws-sts", "mfa", "2fa"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaicoh/awscli-mfa"
documentation = "https://docs.rs/awsmfa"
description = "The automation tool for Multi-Factor Authentication (MFA) process to use awscli."

[dependencies]
anyhow = "1.0"
aws-config = "0.54.1"
aws-sdk-sts = "0.24.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
cli-clipboard = "0.4"
dirs = "4.0"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
totp-rs = "4.2"
